<resources>
    <string name="app_name">Image recognition 77229152</string>
    <string name="please_enter_your_password">Please enter your Password</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="register">REGISTER</string>
    <string name="create_your_account">Create your Account</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="welcome_to_image_recognition">Welcome to Image Recognition</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
</resources>